--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,6 @@
     <name>world-cup</name>
     <description>FIFA World Cup betting application</description>
 
-
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -22,8 +21,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <spring-social-google.version>1.1.3</spring-social-google.version>
-        <!--<spring-social.version>2.0.0.M4</spring-social.version>-->
     </properties>
 
     <dependencies>
@@ -31,12 +28,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -56,36 +51,18 @@
             <optional>true</optional>
         </dependency>
 
-        <!-- social
+        <!-- for social connection -->
         <dependency>
-            <groupId>org.springframework.social</groupId>
-            <artifactId>spring-social-security</artifactId>
-        </dependency>
-        -->
-        <!-- facebook login -->
-        <dependency>
-            <groupId>org.springframework.social</groupId>
-            <artifactId>spring-social-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.social</groupId>
-            <artifactId>spring-social-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.social</groupId>
-            <artifactId>spring-social-config</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.social</groupId>
-            <artifactId>spring-social-facebook</artifactId>
-        </dependency>
-        <!-- google login -->
-        <dependency>
-            <groupId>com.github.spring-social</groupId>
-            <artifactId>spring-social-google</artifactId>
-            <version>${spring-social-google.version}</version>
+            <groupId>org.brickred</groupId>
+            <artifactId>socialauth</artifactId>
+            <version>4.14</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.18</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -97,8 +74,6 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.4</version>
         </dependency>
-
-
         <!--<dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-io</artifactId>
