--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -8,8 +8,12 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: none
-    show-sql: false
+    show-sql: true
 
   h2:
    console:
      enabled: false
+
+worldcup:
+  socialauth:
+    base-callback-url: "https://ab-world-cup.herokuapp.com/"
