UI permissions admin page for updating result - UI only

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,6 +35,7 @@ worldcup:
     base-callback-url: "http://localhost:8080"
     success-page-url: "#/welcome"
     access-denied-page-url: "#/access-denied"
+  admin-emails: "yoav200@gmail.com,ibadichi@gmail.com"
   tiebreaking:
     group-a:
     group-b:
