update result fix

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -16,4 +16,4 @@ spring:
 
 worldcup:
   socialauth:
-    base-callback-url: "https://ab-world-cup.herokuapp.com/"
+    base-callback-url: "https://ab-world-cup.herokuapp.com"
