--- a/src/main/resources/oauth_consumer.properties
+++ b/src/main/resources/oauth_consumer.properties
@@ -13,8 +13,10 @@ twitter.com.consumer_key=
 twitter.com.consumer_secret=
 
 #facebook
-graph.facebook.com.consumer_key=1762511607385710
-graph.facebook.com.consumer_secret=769d50cceb6e1f4d3c79196ed6b6c845
+#graph.facebook.com.consumer_key=1762511607385710
+#graph.facebook.com.consumer_secret=769d50cceb6e1f4d3c79196ed6b6c845
+graph.facebook.com.consumer_key=567099173632370
+graph.facebook.com.consumer_secret=48881cb7c41606110de542893702ecaa
 graph.facebook.com.custom_permissions=email,public_profile,user_about_me,user_birthday,user_friends,user_hometown,user_location
 
 #hotmail
