--- a/src/main/resources/points.properties
+++ b/src/main/resources/points.properties
@@ -5,4 +5,5 @@ QUALIFIER.QUARTER_FINAL=4
 QUALIFIER.SEMI_FINAL=8
 QUALIFIER.FINAL=16
 QUALIFIER.THIRD_PLACE=24
+QUALIFIER.THIRD_PLACE_WINNER=32
 QUALIFIER.WINNER=32
