change points config

--- a/src/main/resources/points.properties
+++ b/src/main/resources/points.properties
@@ -4,5 +4,6 @@ QUALIFIER.ROUND_OF_16=1
 QUALIFIER.QUARTER_FINAL=2
 QUALIFIER.SEMI_FINAL=3
 QUALIFIER.FINAL=4
+QUALIFIER.THIRD_PLACE=0
 QUALIFIER.THIRD_PLACE_WINNER=5
 QUALIFIER.WINNER=5
