redirect to clicked view after login added next and prev paging to matches bets refactor ranking view

--- a/src/main/resources/oauth_consumer.properties
+++ b/src/main/resources/oauth_consumer.properties
@@ -17,7 +17,7 @@ twitter.com.consumer_secret=
 #graph.facebook.com.consumer_secret=769d50cceb6e1f4d3c79196ed6b6c845
 graph.facebook.com.consumer_key=567099173632370
 graph.facebook.com.consumer_secret=48881cb7c41606110de542893702ecaa
-graph.facebook.com.custom_permissions=email,public_profile,user_birthday,user_friends,user_hometown,user_location
+graph.facebook.com.custom_permissions=email,public_profile,user_birthday,user_hometown,user_location
 
 #hotmail
 consent.live.com.consumer_key=
