--- a/pom.xml
+++ b/pom.xml
@@ -87,9 +87,11 @@
         </dependency>
 
         <dependency>
-            <groupId>postgresql</groupId>
+<!--            <groupId>postgresql</groupId>-->
+<!--            <artifactId>postgresql</artifactId>-->
+<!--            <version>9.1-901-1.jdbc4</version>-->
+            <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>9.1-901-1.jdbc4</version>
         </dependency>
 
         <dependency>
