--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -2,33 +2,39 @@ server:
   port: 8080
 
 spring:
+  profiles:
+    active: test
   application:
     name: world-cup
-
   datasource:
-    url: ${DATABASE_URL}
-    driverClassName: org.postgresql.Driver
-    username: ${DATABASE_USER}
-    password: ${DATABASE_PASSWORD}
-
+    url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+    driverClassName: org.h2.Driver
+    username: admin
+    password: admin
   jpa:
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    defer-datasource-initialization: true
     hibernate:
-      ddl-auto: none # none create, create-drop, validate, update
+      ddl-auto: create-drop
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQL81Dialect
+        order_updates: true
+        order_inserts: true
+        jdbc:
+          batch_size: 200
+          batch_versioned_data: true
     show-sql: true
     open-in-view: false
+
+  h2:
+    console:
+      enabled: true
+      path: /h2
 
   output:
     ansi:
       enabled: always
-
-  flyway:
-    enabled: true
 
   mail:
     host: smtp.gmail.com
@@ -41,6 +47,7 @@ spring:
         smtp.starttls.enable: true
         smtp.timeout: 5000
         smtp.writetimeout: 5000
+
 
 management:
   endpoints:
@@ -59,7 +66,6 @@ logging:
 
 
 worldcup:
-  start-date-time-config: '2022-11-20 19:00:00+00'
+  start-date-time: '2022-11-20 19:00:00+00'
   admin-emails: "yoav200@gmail.com,yoav.alhalel@bnymellon.com"
-  confirmation-timeout-minutes: 60
-  app-url: "http://localhost:8080"
+
