externalize start-date-time-config

--- a/src/main/resources/application-stage.yml
+++ b/src/main/resources/application-stage.yml
@@ -17,7 +17,7 @@ spring:
     enabled: true
 
 worldcup:
-  start-date-time-config: '2022-11-20 19:00:00+00'
+  start-date-time-config: ${BETS_CLOSE_TIME}
   admin-emails: "yoav200@gmail.com,yoav.alhalel@bnymellon.com"
   confirmation-timeout-minutes: 60
   app-url: "https://world-cup-app.herokuapp.com"
