fix tie break, fix navbar not closing in mobile, update rules

--- a/src/main/resources/tiebreaking.properties
+++ b/src/main/resources/tiebreaking.properties
@@ -1,8 +1,8 @@
-GroupA=
+GroupA=NETHERLANDS,ECUADOR
 GroupB=
 GroupC=
 GroupD=
 GroupE=
-GroupF=
+GroupF=CROATIA,MOROCCO
 GroupG=
-GroupH=
+GroupH=SOUTH KOREA,URUGUAY
